# finance-budget

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 72c1b5b28060_add_budgets_table.py  af4286d16fc6_add_category_to_transactions.py  c894455868c9_create_transactions_table.py  edb560944815_add_ingestion_pipeline_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  analytics.py  budgets.py  tag_rules.py  transactions.py
backend/app/config/: __init__.py
backend/app/domain/models/: budget.py  raw_transaction.py  staged_transaction.py  tag_rule.py  transaction.py
backend/app/domain/repositories/: budget_repository.py  staged_transaction_repository.py  tag_rule_repository.py  transaction_repository.py
backend/app/domain/services/: ingestion_service.py  tagger_service.py  transaction_service.py
backend/app/infrastructure/database/: connection.py  models.py
backend/app/infrastructure/parsers/: base.py  csv_parser.py  generic_excel_parser.py  kicb_excel_parser.py  parser_factory.py
backend/app/infrastructure/persistence/: budget_repository_impl.py  staged_transaction_repository_impl.py  tag_rule_repository_impl.py  transaction_repository_impl.py
backend/tests/: conftest.py  test_analytics_api.py  test_domain_service.py  test_transactions_api.py
compose/: .env.example  docker-compose.prod.yml
frontend/: Dockerfile  README.md  index.html  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  (+1 more)
(+54 files in other folders)
